--- a/20220905_fullpage/css/style01.css
+++ b/20220905_fullpage/css/style01.css
@@ -295,7 +295,6 @@ h2 {
 }
 .sns li{
   display: flex;
-  background-color: skyblue;
   height: 100%;
   padding: 0px 20px;
   justify-content: center;
@@ -309,7 +308,10 @@ h2 {
 .footer ul{
   margin-left: auto;
   display: flex;
-  background-color: pink;
+}
+.footer_link{
+  padding: 50px 0px 50px 20px;
+  
 }
 .footer_link ul li{
   float: left;
